--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
-        <title></title>
-        <link rel="stylesheet" href="../css/index.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
+    <title></title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+</head>
 
-    <body>
-        <div id="wrap">
-            <!-- 歌曲图片 -->
-            <div class="songImg">
-                <img src="../source/song_1.jpg" alt="">
+<body>
+    <div id="wrap">
+        <!-- 歌曲图片 -->
+        <div class="songImg">
+            <img src="./source/song_1.jpg" alt="">
+        </div>
+
+        <!-- 歌曲信息 -->
+        <div class="songInfo">
+            <h2 class="name">听妈妈的话</h2>
+            <div class="singer">周杰伦</div>
+            <div class="album">依然范特西</div>
+        </div>
+
+        <!-- 进度条 -->
+        <div class="progress">
+            <div class="curTime">00:00</div>
+            <div class="drag">
+                <div class="circle"></div>
+                <div class="frontBg"></div>
+                <div class="backBg"></div>
             </div>
+            <div class="totalTime">00:00</div>
+        </div>
 
-            <!-- 歌曲信息 -->
-            <div class="songInfo">
-                <h2 class="name">听妈妈的话</h2>
-                <div class="singer">周杰伦</div>
-                <div class="album">依然范特西</div>
-            </div>
+        <!-- 底部菜单 -->
+        <ul class="control">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
 
-            <!-- 进度条 -->
-            <div class="progress">
-                <div class="curTime">00:00</div>
-                <div class="drag">
-                    <div class="circle"></div>
-                    <div class="frontBg"></div>
-                    <div class="backBg"></div>
-                </div>
-                <div class="totalTime">00:00</div>
-            </div>
-
-            <!-- 底部菜单 -->
-            <ul class="control">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-
-            <!-- 弹出列表 -->
-            <!-- <div class="list">
+        <!-- 弹出列表 -->
+        <!-- <div class="list">
                 <dl>
                     <dt>播放列表</dt>
                     <dd>听妈妈的话</dd>
@@ -53,17 +53,18 @@
                 </dl>
                 <div class="close">关闭</div>
             </div> -->
-        </div>
+    </div>
 
 
-        <script src="../js/zepto.min.js"></script>
-        <script src="../js/gaussBlur.js"></script>
-        <script src="../js/render.js"></script>
-        <script src="../js/audio.js"></script>
-        <script src="../js/indexControl.js"></script>
-        <script src="../js/listControl.js"></script>
-        <script src="../js/progress.js"></script>
+    <script src="./js/zepto.min.js"></script>
+    <script src="./js/gaussBlur.js"></script>
+    <script src="./js/render.js"></script>
+    <script src="./js/audio.js"></script>
+    <script src="./js/indexControl.js"></script>
+    <script src="./js/listControl.js"></script>
+    <script src="./js/progress.js"></script>
 
-        <script src="../js/index.js"></script>
-    </body>
+    <script src="./js/index.js"></script>
+</body>
+
 </html>
